preface fix (form) + catalog on mobile perfectPixeled

--- a/source/sass/blocks/biota.scss
+++ b/source/sass/blocks/biota.scss
@@ -6,18 +6,19 @@
   padding: 0;
 }
 
-.biota__caption {
+.biota__figcaption {
   font-size: 14px;
   line-height: 24px;
   font-weight: bold;
   text-transform: uppercase;
-  margin-top: 10px;
+  margin-top: 11px;
 }
 
 .biota__author {
   display: block;
   font-weight: normal;
   text-transform: none;
+  margin-bottom: 11px;
 }
 
 .biota__image-wrapper {
@@ -37,5 +38,26 @@
 
   @media (min-width: $tablet-width) {
     display: block;
+  }
+}
+
+.biota__likes {
+  position: relative;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: bold;
+  padding: 0 0 0 38px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 6px;
+    left: 12px;
+    width: 23px;
+    height: 21px;
+    transform: translate(-50%, -50%);
+    background-image: url("../img/icon-like.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
   }
 }
