--- a/source/sass/blocks/hotel.scss
+++ b/source/sass/blocks/hotel.scss
@@ -58,6 +58,7 @@
 
 .hotel__find-button {
   width: 280px;
+  padding-top: 14px;
 
   @media (min-width: $tablet-width) {
     width: 460px;
