--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -477,10 +477,12 @@
     grid-area: 5 / 1 / 6 / 3;
     width: 325px;
     margin: 0;
+    padding: 0 35px 0 20px;
   }
 
   @media (min-width: $desktop-width) {
     width: 480px;
+    padding: 0 20px;
   }
 }
 
